[gd_scene load_steps=9 format=3 uid="uid://clu8aephonmvo"]

[ext_resource type="Script" path="res://scenes/Game/GameHUD.gd" id="1_w0g27"]
[ext_resource type="FontFile" uid="uid://c6t2r4co1nftq" path="res://assets/fonts/OpenSans-VariableFont_wdth,wght.ttf" id="2_rjx7w"]
[ext_resource type="Texture2D" uid="uid://dai080a7xrehu" path="res://assets/hud/health-bar.png" id="3_4w1d6"]
[ext_resource type="Script" path="res://scenes/Game/HealthBar.gd" id="4_exui5"]
[ext_resource type="FontFile" uid="uid://d1ss5yh1f1vf5" path="res://assets/fonts/Audiowide-Regular.ttf" id="6_6qu84"]

[sub_resource type="Animation" id="Animation_5x5hd"]
resource_name = "damage_screen"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageOverlayAnimation/DamageScreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.988235, 0.0941176, 0.0627451, 0), Color(0.988235, 0.0941176, 0.0627451, 0.372549), Color(0.988235, 0.0941176, 0.0627451, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1jxnq"]
_data = {
"damage_screen": SubResource("Animation_5x5hd")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_es2gn"]

[node name="GameHUD" type="CanvasLayer"]
script = ExtResource("1_w0g27")

[node name="DamageOverlayAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1jxnq")
}

[node name="DamageScreen" type="ColorRect" parent="DamageOverlayAnimation"]
offset_right = 1919.0
offset_bottom = 1086.0
size_flags_horizontal = 4
color = Color(0.988235, 0.0941176, 0.0627451, 0)

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -93.0
offset_right = 93.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_rjx7w")
theme_override_font_sizes/font_size = 146
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -71.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_rjx7w")
theme_override_font_sizes/font_size = 103
horizontal_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]

[node name="HealthBar" type="Sprite2D" parent="."]
position = Vector2(1834, 54)
scale = Vector2(0.189433, 0.181416)
texture = ExtResource("3_4w1d6")
script = ExtResource("4_exui5")
metadata/_edit_group_ = true

[node name="Value" type="ColorRect" parent="HealthBar"]
offset_left = -261.697
offset_top = -100.585
offset_right = 264.983
offset_bottom = 120.17
color = Color(1, 0, 0, 1)

[node name="RestartButton" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -165.0
offset_top = 796.0
offset_right = 194.0
offset_bottom = 881.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_6qu84")
theme_override_font_sizes/font_size = 66
theme_override_styles/normal = SubResource("StyleBoxEmpty_es2gn")
text = "RESTART"

[node name="MainMenuButton" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -205.0
offset_top = 921.0
offset_right = 234.0
offset_bottom = 1061.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_6qu84")
theme_override_font_sizes/font_size = 66
theme_override_styles/normal = SubResource("StyleBoxEmpty_es2gn")
text = "MAIN MENU"

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="RestartButton" to="." method="begin_start_game"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
